--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Fylo Website" />
   <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
@@ -15,6 +16,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <link rel="stylesheet" href="css/style.css" />
 
@@ -167,12 +171,13 @@
     </div>
   </section>
 
-  <section id="testimonial" class="py-28 bg-mainBackground">
-    <div class=" w-4/5 md:w-11/12 max-w-5xl mx-auto relative flex flex-col space-y-6 md:space-y-0 md:space-x-6 md:flex-row">
+  <section id="testimonial" class="py-28 bg-mainBackground pb-0">
+    <div
+      class=" w-4/5 md:w-11/12 max-w-5xl mx-auto relative flex flex-col space-y-6 md:space-y-0 md:space-x-6 md:flex-row">
 
       <!-- profile 1 -->
       <div class="bg-testimonialsBackground rounded-lg p-6 space-y-5 z-10">
-        <p class="opacity-90 text-sm leading-6">
+        <p class="opacity-80 text-sm leading-6">
           Fylo has improved our team productivity by an
           order of magnitude. Since making the switch our team has become a well-oiled
           collaboration machine.
@@ -195,7 +200,7 @@
 
       <!-- profile 2 -->
       <div class="bg-testimonialsBackground rounded-lg p-6 space-y-5">
-        <p class="opacity-90 text-sm leading-6">
+        <p class="opacity-80 text-sm leading-6">
           Fylo has improved our team productivity by an
           order of magnitude. Since making the switch our team has become a well-oiled
           collaboration machine.
@@ -218,7 +223,7 @@
 
       <!-- profile 3 -->
       <div class="bg-testimonialsBackground rounded-lg p-6 space-y-5">
-        <p class="opacity-90 text-sm leading-6">
+        <p class="opacity-80 text-sm leading-6">
           Fylo has improved our team productivity by an
           order of magnitude. Since making the switch our team has become a well-oiled
           collaboration machine.
@@ -238,7 +243,7 @@
         </div>
       </div>
 
-      <div class="absolute -top-16 left-0 md:-top-9 md:-left-7">
+      <div class="absolute -top-14 left-0 md:-top-7 w-10 md:-left-7">
         <img src="/images/bg-quotes.png" alt="" class="w-full">
       </div>
 
@@ -247,21 +252,122 @@
 
   </section>
 
-      Get early access today
-  It only takes a minute to sign up and our free starter tier is extremely
-  generous. If you have any questions, our support team would be happy to help
-  you. Get Started For Free Lorem ipsum dolor sit amet, consectetur adipiscing
-  elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
-  +1-543-123-4567 example@fylo.com About Us Jobs Press Blog Contact Us Terms
-  Privacy
 
-  <footer>
-    <p class="attribution">
+  <section id="email" class="bg-mainBackground">
+    <form
+      class=" w-4/5 md:w-11/12 max-w-2xl mx-auto relative flex flex-col space-y-6 bg-emailBackground text-center p-6 rounded-xl top-40 md:top-24">
+      <h2 class="font-bold text-lg md:text-xl">
+        Get early access today
+      </h2>
+      <p class="opacity-80 leading-6 md:px-14 text-sm">
+        It only takes a minute to sign up and our free starter tier is extremely
+        generous. If you have any questions, our support team would be happy to help
+        you.
+      </p>
+
+      <div class="flex flex-col space-y-6 md:space-y-0 md:flex-row md:space-x-6 mx-auto w-full justify-center md:px-6">
+
+        <input type="text" name="search" aria-label="Search"
+          class="px-4 py-2.5 rounded-full placeholder-gray-300 placeholder:text-xs text-black md:w-2/3 focus:outline-none focus:ring focus:ring-gradient2"
+          placeholder="email@example.com" autocomplete="off" id="access_input">
+        <button type="submit"
+          class="rounded-full py-4 px-4 transition-all duration-300 shadow-lg font-bold bg-gradient-to-r from-gradient1 to-gradient2 opacity-90 hover:from-gradient2 hover:to-purple-300 text-xs md:w-1/3 focus:outline-none focus:border-none"
+          id="access_btn">Get
+          Started For Free</button>
+      </div>
+
+      <p class="absolute text-red-700 bottom-20 md:bottom-0 text-xs left-10 md:left-20 hidden err_msg">
+        Please input a valid email
+      </p>
+
+    </form>
+  </section>
+
+  <footer id="footer" class="bg-footerBackground pb-14 pt-60 md:pt-32">
+    <div class="max-w-6xl w-4/5 md:w-11/12 mx-auto flex flex-col space-y-10">
+      <!-- logo -->
+      <div class="w-36">
+        <img src="/images/logo.svg" alt="logo" class="w-full">
+      </div>
+
+      <div class="flex flex-col justify-between space-y-6 md:flex-row md:space-x-10 md:space-y-0">
+        <!-- location -->
+        <p class="flex flex-row items-start md:w-2/5">
+          <img src="/images/icon-location.svg" alt="location" class="mr-5">
+          <span class="leading-5 opacity-80 text-sm">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus quibusdam perferendis voluptatum
+            reiciendis,
+            unde
+            quia ex hic voluptates velit!
+          </span>
+
+        </p>
+
+
+        <div class="flex flex-col items-start space-y-4">
+          <!-- number -->
+          <p class="flex flex-row items-center">
+            <img src="/images/icon-phone.svg" alt="number" class="mr-5">
+            <span class="opacity-80 text-sm">
+              +1-543-123-4567
+            </span>
+
+          </p>
+
+          <!-- email -->
+          <p class="flex flex-row items-center ">
+            <img src="/images/icon-email.svg" alt="email" class="mr-5">
+            <span class="opacity-80">
+              example@fylo.com
+            </span>
+
+          </p>
+        </div>
+
+        <ul class="flex flex-col space-y-4">
+          <li class="opacity-80 hover:opacity-100 text-sm">About Us</li>
+          <li class="opacity-80 hover:opacity-100 text-sm">Jobs</li>
+          <li class="opacity-80 hover:opacity-100 text-sm">Press</li>
+          <li class="opacity-80 hover:opacity-100 text-sm">Blog</li>
+        </ul>
+
+        <ul class="flex flex-col space-y-4 text-sm">
+          <li class="opacity-80 hover:opacity-100 text-sm">Contact Us</li>
+          <li class="opacity-80 hover:opacity-100 text-sm">Terms</li>
+          <li class="opacity-80 hover:opacity-100 text-sm">Privacy</li>
+        </ul>
+
+        <div class="flex flex-row space-x-3 items-start">
+          <a href="#" class="border border-white rounded-full px-3 py-2
+          text-xs hover:text-gradient1 hover:border-gradient1 duration-200">
+            <i class="fa-brands fa-facebook-f"></i>
+          </a>
+          <a href="#" class="border border-white rounded-full py-2 px-2.5
+          text-xs hover:text-gradient1 hover:border-gradient1 duration-200">
+            <i class="fa-brands fa-twitter"></i>
+          </a>
+          <a href="#" class="border border-white rounded-full py-2 px-2.5
+          text-xs hover:text-gradient1 hover:border-gradient1 duration-200">
+            <i class="fa-brands fa-instagram"></i>
+          </a>
+        </div>
+      </div>
+
+
+
+    </div>
+    <p class="attribution text-center items-center mt-10">
       Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a
-        href="#">Your Name Here</a>.
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        class="text-gradient2 hover:border-b">Frontend Mentor</a>. Coded by <a href="https://twitter.com/ekiye_s"
+        class="text-gradient2 hover:border-b" target="_blank">Your
+        Henry</a>.
     </p>
   </footer>
+
+
+
+  <script src="app.js" defer></script>
 </body>
 
 </html>
