updated readme file

--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         class="text-gradient2 hover:border-b">Frontend Mentor</a>. Coded by <a href="https://twitter.com/ekiye_s"
-        class="text-gradient2 hover:border-b" target="_blank">Your
+        class="text-gradient2 hover:border-b" target="_blank">
         Henry</a>.
     </p>
   </footer>
