--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 
 <body>
-  <header id="header" class="container">
+  <header id="header" class="container" role="header">
     <nav>
       <div class="flex flex-row justify-between p-5 md:px-10 wrap">
         <div class="w-20 md:w-32">
@@ -44,7 +44,7 @@
     </nav>
   </header>
 
-  <section id="hero" class="mt-10">
+  <section id="hero" class="mt-10" role="main">
     <div class="bg-curvy-mobile bg-no-repeat bg-contain bg-bottom md:bg-curvy-desktop text-center px-6">
       <div class="pb-28 max-w-3xl mx-auto">
         <img src="/images/illustration-intro.png" alt="" class="mx-auto" />
@@ -79,7 +79,7 @@
 
   </section>
 
-  <section id="items" class="bg-mainBackground">
+  <section id="items" class="bg-mainBackground" role="main">
     <div class="max-w-4xl w-full md:w-10/12 mx-auto grid grid-cols-1 md:grid-cols-2 gap-14 py-24">
 
       <!-- access -->
@@ -136,7 +136,7 @@
     </div>
   </section>
 
-  <section id="productive" class="bg-mainBackground">
+  <section id="productive" class="bg-mainBackground" role="main">
     <div class="flex flex-col space-y-3 w-full px-5 md:w-11/12 mx-auto md:flex-row md:space-y-0 md:space-x-14">
 
       <div class="w-3/4 md:w-1/2 mx-auto">
@@ -171,7 +171,7 @@
     </div>
   </section>
 
-  <section id="testimonial" class="py-28 bg-mainBackground pb-0">
+  <section id="testimonial" class="py-28 bg-mainBackground pb-0" role="main">
     <div
       class=" w-4/5 md:w-11/12 max-w-5xl mx-auto relative flex flex-col space-y-6 md:space-y-0 md:space-x-6 md:flex-row">
 
@@ -253,7 +253,7 @@
   </section>
 
 
-  <section id="email" class="bg-mainBackground">
+  <section id="email" class="bg-mainBackground" role="main">
     <form
       class=" w-4/5 md:w-11/12 max-w-2xl mx-auto relative flex flex-col space-y-6 bg-emailBackground text-center p-6 rounded-xl top-40 md:top-24">
       <h2 class="font-bold text-lg md:text-xl">
