--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
   </header>
 
   <section id="hero" class="mt-10">
-    <main class="bg-curvy-mobile bg-no-repeat bg-contain bg-bottom md:bg-curvy-desktop text-center px-6">
+    <div class="bg-curvy-mobile bg-no-repeat bg-contain bg-bottom md:bg-curvy-desktop text-center px-6">
       <div class="pb-28 max-w-3xl mx-auto">
         <img src="/images/illustration-intro.png" alt="" class="mx-auto" />
       </div>
-    </main>
+    </div>
 
-    <main class="bg-mainBackground text-center px-6 py-4 ">
+    <div class="bg-mainBackground text-center px-6 py-4 ">
       <div class="-mt-24 space-y-6 max-w-3xl mx-auto">
         <h1 class="text-center text-xl font-bold md:text-3xl">All your files in one secure location, accessible
           anywhere.
@@ -73,14 +73,14 @@
 
       </div>
 
-    </main>
+    </div>
 
 
 
   </section>
 
   <section id="items" class="bg-mainBackground">
-    <main class="max-w-4xl w-full md:w-10/12 mx-auto grid grid-cols-1 md:grid-cols-2 gap-14 py-24">
+    <div class="max-w-4xl w-full md:w-10/12 mx-auto grid grid-cols-1 md:grid-cols-2 gap-14 py-24">
 
       <!-- access -->
       <div class="flex flex-col items-center text-center space-y-2 px-4">
@@ -133,11 +133,11 @@
           to be securely stored and shared.
         </p>
       </div>
-    </main>
+    </div>
   </section>
 
   <section id="productive" class="bg-mainBackground">
-    <main class="flex flex-col space-y-3 w-full px-5 md:w-11/12 mx-auto md:flex-row md:space-y-0 md:space-x-14">
+    <div class="flex flex-col space-y-3 w-full px-5 md:w-11/12 mx-auto md:flex-row md:space-y-0 md:space-x-14">
 
       <div class="w-3/4 md:w-1/2 mx-auto">
         <img src="/images/illustration-stay-productive.png" alt="stay productive" class="w-full">
@@ -168,11 +168,11 @@
         </div>
       </div>
 
-    </main>
+    </div>
   </section>
 
   <section id="testimonial" class="py-28 bg-mainBackground pb-0">
-    <main
+    <div
       class=" w-4/5 md:w-11/12 max-w-5xl mx-auto relative flex flex-col space-y-6 md:space-y-0 md:space-x-6 md:flex-row">
 
       <!-- profile 1 -->
@@ -247,7 +247,7 @@
         <img src="/images/bg-quotes.png" alt="" class="w-full">
       </div>
 
-    </main>
+    </div>
 
 
   </section>
@@ -265,7 +265,7 @@
         you.
       </p>
 
-      <main class="flex flex-col space-y-6 md:space-y-0 md:flex-row md:space-x-6 mx-auto w-full justify-center md:px-6">
+      <div class="flex flex-col space-y-6 md:space-y-0 md:flex-row md:space-x-6 mx-auto w-full justify-center md:px-6">
 
         <input type="text" name="search" aria-label="Search"
           class="px-4 py-2.5 rounded-full placeholder-gray-300 placeholder:text-xs text-black md:w-2/3 focus:outline-none focus:ring focus:ring-gradient2"
@@ -274,7 +274,7 @@
           class="rounded-full py-4 px-4 transition-all duration-300 shadow-lg font-bold bg-gradient-to-r from-gradient1 to-gradient2 opacity-90 hover:from-gradient2 hover:to-purple-300 text-xs md:w-1/3 focus:outline-none focus:border-none"
           id="access_btn">Get
           Started For Free</button>
-      </main>
+      </div>
 
       <p class="absolute text-red-700 bottom-20 md:bottom-0 text-xs left-10 md:left-20 hidden err_msg">
         Please input a valid email
@@ -284,7 +284,7 @@
   </section>
 
   <footer id="footer" class="bg-footerBackground pb-14 pt-60 md:pt-32">
-    <main class="max-w-6xl w-4/5 md:w-11/12 mx-auto flex flex-col space-y-10">
+    <div class="max-w-6xl w-4/5 md:w-11/12 mx-auto flex flex-col space-y-10">
       <!-- logo -->
       <div class="w-36">
         <img src="/images/logo.svg" alt="logo" class="w-full">
@@ -355,7 +355,7 @@
 
 
 
-    </main>
+    </div>
     <p class="attribution text-center items-center mt-10">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
